--- a/20240404/MainPage.xaml
+++ b/20240404/MainPage.xaml
@@ -1,8 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="_20240404.MainPage">
-
+             x:Class="_20240404.MainPage"
+             xmlns:dibujable="clr-namespace:_20240404">
+    <ContentPage.Resources>
+        <dibujable:DibujoReloj x:Key="dibujoReloj" />
+    </ContentPage.Resources>
+    <GraphicsView Drawable="{StaticResource dibujoReloj}" x:Name="relojGraphicsView">
+        
+    </GraphicsView>
+    <!--
     <ScrollView>
         <VerticalStackLayout
             Padding="30,0"
@@ -32,5 +39,5 @@
                 HorizontalOptions="Fill" />
         </VerticalStackLayout>
     </ScrollView>
-
+    -->
 </ContentPage>
