--- a/20240404/MainPage.xaml
+++ b/20240404/MainPage.xaml
@@ -3,41 +3,17 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="_20240404.MainPage"
              xmlns:dibujable="clr-namespace:_20240404">
-    <ContentPage.Resources>
-        <dibujable:DibujoReloj x:Key="dibujoReloj" />
-    </ContentPage.Resources>
-    <GraphicsView Drawable="{StaticResource dibujoReloj}" x:Name="relojGraphicsView">
-        
-    </GraphicsView>
-    <!--
+
+
     <ScrollView>
         <VerticalStackLayout
             Padding="30,0"
             Spacing="25">
-            <Image
-                Source="dotnet_bot.png"
-                HeightRequest="185"
-                Aspect="AspectFit"
-                SemanticProperties.Description="dot net bot in a race car number eight" />
-
-            <Label
-                Text="Hello, World!"
-                Style="{StaticResource Headline}"
-                SemanticProperties.HeadingLevel="Level1" />
-
-            <Label
-                Text="Welcome to &#10;.NET Multi-platform App UI"
-                Style="{StaticResource SubHeadline}"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I" />
-
             <Button
-                x:Name="CounterBtn"
-                Text="Click me" 
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
+                x:Name="ejemplo1"
+                Text="Reloj" 
+                Clicked="Onejemplo1Clicked"
                 HorizontalOptions="Fill" />
         </VerticalStackLayout>
     </ScrollView>
-    -->
 </ContentPage>
