--- a/20240404/MainPage.xaml
+++ b/20240404/MainPage.xaml
@@ -1,8 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="_20240404.MainPage"
-             xmlns:dibujable="clr-namespace:_20240404">
+             x:Class="_20240404.MainPage">
 
 
     <ScrollView>
@@ -15,10 +14,15 @@
                 Clicked="Onejemplo1Clicked"
                 HorizontalOptions="Fill" />
             <Button
-    x:Name="ejemplo2"
-    Text="Codigo QR" 
-    Clicked="Onejemplo2Clicked"
-    HorizontalOptions="Fill" />
+                x:Name="ejemplo2"
+                Text="Codigo QR" 
+                Clicked="Onejemplo2Clicked"
+                HorizontalOptions="Fill" />
+            <Button
+                x:Name="ejemplo3"
+                Text="Trazos" 
+                Clicked="Onejemplo3Clicked"
+                HorizontalOptions="Fill" />
         </VerticalStackLayout>
     </ScrollView>
 </ContentPage>
