--- a/20240404/Pages/EjemploMediaPage.xaml
+++ b/20240404/Pages/EjemploMediaPage.xaml
@@ -4,7 +4,18 @@
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              x:Class="_20240404.Pages.EjemploMediaPage"
              Title="EjemploMediaPage">
-    <VerticalStackLayout>
+    <Grid RowDefinitions="1*, Auto, 25, 14, 20" ColumnDefinitions="*, 2*, Auto, 300">
+        <!-- 
+        <Grid.RowDefinitions>
+            <RowDefinition Height="450"/>
+            <RowDefinition/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        -->
         <toolkit:MediaElement 
             x:Name="video"
             WidthRequest="450"
@@ -15,7 +26,8 @@
             ShouldLoopPlayback="True"
             ShouldShowPlaybackControls="True"
             Aspect="Fill"
-            />
-        <Button x:Name="btn" Text="Play/Pause" Clicked="OnPlayClic" HorizontalOptions="Center"/>
-    </VerticalStackLayout>
+        />
+        <Button Grid.Column="1" x:Name="btn" Text="Play/Pause" Clicked="OnPlayClic" HorizontalOptions="Center"/>
+        <Slider Grid.Row="1" Grid.ColumnSpan="2" Maximum="1.0" Minimum="0.0" Rotation="70" WidthRequest="100"/>
+    </Grid>
 </ContentPage>
